--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.16.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.513.0",
+    "marked": "^16.1.2",
     "motion": "^12.16.0",
     "next": "15.3.3",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "openai": "^5.1.1",
     "postcss": "^8.5.4",
+    "puppeteer": "^24.16.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0"
