add dev deployment on subdomain

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,27 @@ services:
       - traefik.http.routers.ganglem-ropagen.middlewares=ganglem-ropagen-auth
       - traefik.http.middlewares.ganglem-ropagen-auth.basicauth.users=emilija:$$2y$$05$$tDhbeNaYAP68YA2UTeAvZuiPF2cyQf0VG2UDA8vpTTck7r0TPVdhW,magda:$$2y$$05$$1//kBHPKl/.Lt/plc7i/GeJZ5YoQ0reTuGolUXcXZ2Cr3mtYXbDgG,shmolbean:$$2y$$05$$Lxtapqyq58mqpT1WgzsLOOEu74PxnRdEjvTlj4zxJ621xZiccXS.q
       - com.centurylinklabs.watchtower.enable=true
-      
+
+  dev:
+    container_name: ganglem-ropagen
+    image: ganglem/ropagen-dev:latest
+    env_file:
+      - .env
+    networks:
+      - web
+    restart: unless-stopped
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.ganglem-ropagen.rule=Host(`dev.ganglem.space`)
+      - traefik.http.routers.ganglem-ropagen.entrypoints=websecure
+      - traefik.http.routers.ganglem-ropagen.tls=true
+      - traefik.http.routers.ganglem-ropagen.tls.certresolver=lets-encrypt
+      - traefik.docker.network=web
+      - traefik.http.routers.ganglem-ropagen.middlewares=ganglem-ropagen-auth
+      - traefik.http.middlewares.ganglem-ropagen-auth.basicauth.users=emilija:$$2y$$05$$tDhbeNaYAP68YA2UTeAvZuiPF2cyQf0VG2UDA8vpTTck7r0TPVdhW,magda:$$2y$$05$$1//kBHPKl/.Lt/plc7i/GeJZ5YoQ0reTuGolUXcXZ2Cr3mtYXbDgG,shmolbean:$$2y$$05$$Lxtapqyq58mqpT1WgzsLOOEu74PxnRdEjvTlj4zxJ621xZiccXS.q
+      - com.centurylinklabs.watchtower.enable=true>
+
+
 networks:
   web:
     external: true
