--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.513.0",
     "marked": "^16.1.2",
+    "mistral": "^0.0.4",
     "motion": "^12.16.0",
     "next": "15.3.3",
     "next-intl": "^4.1.0",
