--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
+    "@sparticuz/chromium": "^138.0.2",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -24,14 +25,15 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.513.0",
     "marked": "^16.1.2",
-    "mistral": "^0.0.4",
+    "mistral": "^0.0.1",
     "motion": "^12.16.0",
-    "next": "15.3.3",
+    "next": "15.4.7",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "openai": "^5.1.1",
     "postcss": "^8.5.4",
     "puppeteer": "^24.16.2",
+    "puppeteer-core": "^24.19.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.0"
