add docs framework with first example entry

--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@sparticuz/chromium": "^138.0.2",
+    "@types/mdx": "^2.0.13",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.16.0",
+    "fumadocs-core": "^15.7.12",
+    "fumadocs-mdx": "^11.10.0",
+    "fumadocs-ui": "^15.7.12",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.513.0",
