--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fumadocs-core": "^15.7.12",
     "fumadocs-mdx": "^11.10.0",
     "fumadocs-ui": "^15.7.12",
+    "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.513.0",
