--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@sparticuz/chromium": "^138.0.2",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.76.1",
     "@types/mdx": "^2.0.13",
     "ai": "^4.3.16",
     "class-variance-authority": "^0.7.1",
