--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.76.1",
     "@types/mdx": "^2.0.13",
-    "ai": "^4.3.16",
+    "ai": "^6.0.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.16.0",
@@ -31,12 +31,12 @@
     "fumadocs-ui": "^15.7.12",
     "gsap": "^3.13.0",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.1",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.513.0",
     "marked": "^16.1.2",
     "mistral": "^0.0.1",
     "motion": "^12.16.0",
-    "next": "15.4.8",
+    "next": "^15.5.9",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "openai": "^5.1.1",
