--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       - traefik.http.routers.ganglem-ropagen.rule=Host(`ropagen.eu`)
       - traefik.http.routers.ganglem-ropagen.entrypoints=websecure
       - traefik.http.routers.ganglem-ropagen.tls=true
-      - traefik.http.routers.ganglem-ropagen.tls.certresolver=lets-encrypt
+      - traefik.http.routers.ganglem-ropagen.tls.certresolver=le-emilija
       - traefik.docker.network=web
       - com.centurylinklabs.watchtower.enable=true
 
@@ -29,7 +29,7 @@ services:
       - traefik.http.routers.ganglem-ropagen-dev.rule=Host(`dev.ropagen.eu`)
       - traefik.http.routers.ganglem-ropagen-dev.entrypoints=websecure
       - traefik.http.routers.ganglem-ropagen-dev.tls=true
-      - traefik.http.routers.ganglem-ropagen-dev.tls.certresolver=lets-encrypt
+      - traefik.http.routers.ganglem-ropagen-dev.tls.certresolver=le-emilija
       - traefik.docker.network=web
       - com.centurylinklabs.watchtower.enable=true
 
